# kids-robotics

./: 2025-2026 vex robotics REVOLVER.iqblocks.yaml  2025-2026 vex robotics REVOLVER.iqpython.yaml  REVOLVER auto code.iqblocks.yaml  commit.py  format.py  pintexcode.iqblocks.yaml  pyproject.toml
