[tool.poetry]
name = "vexcode"
version = "0.1.0"
description = ""
authors = ["Robert Bradshaw <robertwb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.3"
ruyaml = "^0.91.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
